# ml-dementia-prediction

./: README.md
Clinical App/: .gitignore  LICENSE  README.md  app_metadata.json  baseline_hazard.json  feature_manifest.json  start.bat  xgb_cox_model.json
Clinical App/backend/: main.py  requirements.txt  test_backend.py
Clinical App/frontend/: .env.example  package-lock.json
Clinical App/frontend/src/: App.css  App.tsx
af-dementia-survival/af-dementia-survival/: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  ruff.toml
af-dementia-survival/af-dementia-survival/configs/: default.yaml
af-dementia-survival/af-dementia-survival/data/example/: category_lookup.csv  example_cohort.csv
af-dementia-survival/af-dementia-survival/src/afds/: __init__.py  cli.py  io.py  metrics.py  plots.py  preprocess.py  schema.py
af-dementia-survival/af-dementia-survival/src/afds/models/: coxph.py  deepsurv.py  xgboost_cox.py
af-dementia-survival/af-dementia-survival/tests/: test_schema_io.py
