
[project]
name = "af-dementia-survival"
version = "0.1.0"
description = "Reproducible survival modeling pipelines for AF dementia risk (CoxPH, XGB-Cox, DeepSurv)."
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
afds = "afds.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]
